# sa-token-rust

./: 404.html  Cargo.toml  README_zh-CN.md  hashmap.json  index.html
.github/workflows/: deploy-docs.yml
assets/: app.Cw830rvK.js  guide_adapter.md.tzzr52Yz.js  guide_adapter.md.tzzr52Yz.lean.js  guide_distributed-session.md.R6sTO3vI.js  guide_distributed-session.md.R6sTO3vI.lean.js  guide_event-listener.md.DsKQKDa6.js  guide_event-listener.md.DsKQKDa6.lean.js  guide_framework-integration.md.ClTuj8fe.js  guide_framework-integration.md.ClTuj8fe.lean.js  guide_jwt.md.CHOwTOHJ.js  guide_jwt.md.CHOwTOHJ.lean.js  guide_oauth2.md.BELpw8lj.js  guide_oauth2.md.BELpw8lj.lean.js  guide_online-user-management.md.BLgZ6nqA.js  guide_online-user-management.md.BLgZ6nqA.lean.js  guide_path-auth.md.DKtW1LMe.js  guide_path-auth.md.DKtW1LMe.lean.js  guide_permission-matching.md.D7BgU4Te.js  guide_permission-matching.md.D7BgU4Te.lean.js  guide_quick-start.md.dEPV5GNw.js  guide_quick-start.md.dEPV5GNw.lean.js  guide_security-features.md.DJUwAn31.js  guide_security-features.md.DJUwAn31.lean.js  guide_sso.md.G66FBPnL.js  guide_sso.md.G66FBPnL.lean.js  guide_storage.md.BAovISwq.js  guide_storage.md.BAovISwq.lean.js  guide_stp-util.md.B5LSIY41.js  guide_stp-util.md.B5LSIY41.lean.js  guide_token-styles.md.BHODf3vi.js  guide_token-styles.md.BHODf3vi.lean.js  guide_websocket-auth.md.9_Nen3Ss.js  guide_websocket-auth.md.9_Nen3Ss.lean.js  index.md.DB1ZOrAn.js  index.md.DB1ZOrAn.lean.js  reference_error-reference.md.DFpx5Wfv.js  reference_error-reference.md.DFpx5Wfv.lean.js  style.DalVlJRl.css  zh_guide_adapter.md.BgC-O2FQ.js  zh_guide_adapter.md.BgC-O2FQ.lean.js  (+34 more)
assets/chunks/: @localSearchIndexroot.DMP1HEEx.js  @localSearchIndexzh.Pcc_WtN2.js  IMG_3972.CCkm1aUB.js  VPLocalSearchBox.SivkGHAo.js  framework.DCk0k6gb.js  theme.D2CZALPQ.js
doc/: .gitignore  index.md  package.json
doc/.vitepress/: config.ts
doc/guide/: adapter.md  distributed-session.md  event-listener-quickstart.md  event-listener.md  framework-integration.md  jwt.md  oauth2.md  online-user-management.md  path-auth.md  permission-matching.md  quick-start.md  security-features.md  sso.md  storage.md  stp-util.md  token-styles.md  websocket-auth.md
doc/reference/: error-reference.md
doc/zh/: index.md
doc/zh/guide/: adapter.md  distributed-session.md  event-listener-quickstart.md  event-listener.md  framework-integration.md  jwt.md  oauth2.md  online-user-management.md  path-auth.md  permission-matching.md  project-intro.md  quick-start.md  security-features.md  sso.md  storage.md  stp-util.md  token-styles.md  websocket-auth.md
doc/zh/reference/: error-reference.md
examples/axum-full-example/: Cargo.toml
examples/tonic-full-example/: Cargo.toml  README.md  build.rs
examples/tonic-full-example/proto/: auth.proto
examples/tonic-full-example/src/: main.rs
guide/: adapter.html  distributed-session.html  event-listener.html  framework-integration.html  jwt.html  oauth2.html  online-user-management.html  path-auth.html  permission-matching.html  quick-start.html  security-features.html  sso.html  storage.html  stp-util.html  token-styles.html  websocket-auth.html
reference/: error-reference.html
sa-token-core/: Cargo.toml
sa-token-core/src/: manager.rs  refresh.rs  util.rs
sa-token-core/src/event/: mod.rs
sa-token-core/src/token/: generator.rs  jwt.rs
sa-token-integration-tests/: Cargo.toml
sa-token-integration-tests/tests/: plugin_tonic.rs
sa-token-macro/: Cargo.toml
sa-token-macro/examples/: basic_usage.rs
sa-token-plugin-actix-web/: Cargo.toml
sa-token-plugin-actix-web-core/: Cargo.toml
sa-token-plugin-actix-web-v4/: Cargo.toml
sa-token-plugin-actix-web-v5/: Cargo.toml
sa-token-plugin-axum/: Cargo.toml
sa-token-plugin-gotham/: Cargo.toml
sa-token-plugin-gotham-core/: Cargo.toml
sa-token-plugin-gotham-v074/: Cargo.toml
sa-token-plugin-ntex/: Cargo.toml
sa-token-plugin-ntex-core/: Cargo.toml
sa-token-plugin-ntex-v212/: Cargo.toml
sa-token-plugin-poem/: Cargo.toml
sa-token-plugin-rocket/: Cargo.toml
sa-token-plugin-rocket-core/: Cargo.toml
sa-token-plugin-rocket-v05/: Cargo.toml
sa-token-plugin-salvo/: Cargo.toml
sa-token-plugin-salvo-core/: Cargo.toml
sa-token-plugin-salvo-v079/: Cargo.toml
sa-token-plugin-tide/: Cargo.toml
sa-token-plugin-tonic/: Cargo.toml  README.md
sa-token-plugin-tonic/src/: adapter.rs  error.rs  interceptor.rs  layer.rs  lib.rs  state.rs
sa-token-plugin-warp/: Cargo.toml
sa-token-storage-database/: Cargo.toml
sa-token-storage-memory/: Cargo.toml
sa-token-storage-redis/: Cargo.toml
zh/: index.html
zh/guide/: adapter.html  distributed-session.html  event-listener.html  framework-integration.html  jwt.html  oauth2.html  online-user-management.html  path-auth.html  permission-matching.html  quick-start.html  security-features.html  sso.html  storage.html  stp-util.html  token-styles.html  websocket-auth.html
zh/reference/: error-reference.html
