[package]
name = "sa-token-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for sa-token-rust, a powerful authentication and authorization framework"

[dependencies]
sa-token-adapter = { version = "0.1.16", path = "../sa-token-adapter" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
hex = "0.4.3"
once_cell = "1.21.4"

[dev-dependencies]
sa-token-storage-memory = { version = "0.1.16", path = "../sa-token-storage-memory" }
