[package]
name = "sa-token-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sa-token-core = { path = "../sa-token-core" }
sa-token-adapter = { path = "../sa-token-adapter" }
sa-token-storage-memory = { path = "../sa-token-storage-memory" }
sa-token-plugin-axum = { path = "../sa-token-plugin-axum", features = ["memory"] }
sa-token-plugin-actix-web-v4 = { path = "../sa-token-plugin-actix-web-v4", features = ["memory"] }
sa-token-plugin-tonic = { path = "../sa-token-plugin-tonic", features = ["memory"] }

axum-08 = { package = "axum", version = "0.8", default-features = false, features = ["json"] }
tower-08 = { package = "tower", version = "0.5" }
actix-web = "4"
tonic = { version = "0.12" }
