[package]
name = "sa-token-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for sa-token-rust"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.102", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0"

[dev-dependencies]
tokio = { workspace = true }
sa-token-core = { version = "0.1.12", path = "../sa-token-core" }
sa-token-storage-memory = { version = "0.1.12", path = "../sa-token-storage-memory" }
