[package]
name = "sa-token-plugin-actix-web-v4"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Actix-web 4.x bindings for sa-token-rust"

[dependencies]
sa-token-plugin-actix-web-core = { version = "0.1.14", path = "../sa-token-plugin-actix-web-core" }
sa-token-core = { version = "0.1.13", path = "../sa-token-core" }
sa-token-adapter = { version = "0.1.13", path = "../sa-token-adapter" }
sa-token-macro = { version = "0.1.13", path = "../sa-token-macro" }

sa-token-storage-memory = { version = "0.1.13", path = "../sa-token-storage-memory", optional = true }
sa-token-storage-redis = { version = "0.1.13", path = "../sa-token-storage-redis", optional = true }
sa-token-storage-database = { version = "0.1.13", path = "../sa-token-storage-database", optional = true }

actix-web = "4.11.0"
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
tracing = { workspace = true }
futures = "0.3"

[features]
default = ["memory"]
memory = [
    "dep:sa-token-storage-memory",
    "sa-token-plugin-actix-web-core/memory",
]
redis = [
    "dep:sa-token-storage-redis",
    "sa-token-plugin-actix-web-core/redis",
]
database = [
    "dep:sa-token-storage-database",
    "sa-token-plugin-actix-web-core/database",
]
full = ["memory", "redis", "database"]
