[package]
name = "sa-token-plugin-actix-web-v5"
version = "0.1.16"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Placeholder for future actix-web 5.x bindings"

[dependencies]
sa-token-plugin-actix-web-core = { version = "0.1.16", path = "../sa-token-plugin-actix-web-core" }

sa-token-storage-memory = { version = "0.1.16", path = "../sa-token-storage-memory", optional = true }
sa-token-storage-redis = { version = "0.1.16", path = "../sa-token-storage-redis", optional = true }
sa-token-storage-database = { version = "0.1.16", path = "../sa-token-storage-database", optional = true }

[features]
default = []
memory = ["dep:sa-token-storage-memory", "sa-token-plugin-actix-web-core/memory"]
redis = ["dep:sa-token-storage-redis", "sa-token-plugin-actix-web-core/redis"]
database = ["dep:sa-token-storage-database", "sa-token-plugin-actix-web-core/database"]
