[package]
name = "sa-token-plugin-actix-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Actix-web framework integration for sa-token-rust (facade over versioned bindings)"

[dependencies]
sa-token-plugin-actix-web-v4 = { version = "0.1.14", path = "../sa-token-plugin-actix-web-v4", optional = true }
sa-token-plugin-actix-web-v5 = { version = "0.0.1", path = "../sa-token-plugin-actix-web-v5", optional = true }

[features]
default = ["v4", "memory"]
v4 = ["dep:sa-token-plugin-actix-web-v4"]
v5 = ["dep:sa-token-plugin-actix-web-v5"]
memory = [
    "sa-token-plugin-actix-web-v4?/memory",
    "sa-token-plugin-actix-web-v5?/memory",
]
redis = [
    "sa-token-plugin-actix-web-v4?/redis",
    "sa-token-plugin-actix-web-v5?/redis",
]
database = [
    "sa-token-plugin-actix-web-v4?/database",
    "sa-token-plugin-actix-web-v5?/database",
]
full = ["memory", "redis", "database"]
