[package]
name = "sa-token-plugin-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Axum framework integration for sa-token-rust - All-in-one package"

[dependencies]
# 核心依赖（重新导出给用户）
sa-token-core = { version = "0.1.12" }
sa-token-adapter = { version = "0.1.12" }
sa-token-macro = { version = "0.1.12" }

# 存储实现（可选，通过 feature 控制）
sa-token-storage-memory = { version = "0.1.12", optional = true }
sa-token-storage-redis = { version = "0.1.12", optional = true }
sa-token-storage-database = { version = "0.1.12", optional = true }

# Axum 框架依赖
tokio = { workspace = true }
async-trait = { workspace = true }
axum = "0.8.7"
tower = { workspace = true }
http = { workspace = true }
http-body = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2.1.3"
tracing = { workspace = true }

[features]
default = ["memory"]
# 存储后端选择
memory = ["sa-token-storage-memory"]
redis = ["sa-token-storage-redis"]
database = ["sa-token-storage-database"]
# 包含所有存储后端
full = ["memory", "redis", "database"]
