[package]
name = "sa-token-plugin-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Axum framework integration for sa-token-rust - All-in-one package"

[dependencies]
sa-token-core = { version = "0.1.16" }
sa-token-adapter = { version = "0.1.16" }
sa-token-macro = { version = "0.1.16" }

sa-token-storage-memory = { version = "0.1.16", optional = true }
sa-token-storage-redis = { version = "0.1.16", optional = true }
sa-token-storage-database = { version = "0.1.16", optional = true }

tokio = { workspace = true }
async-trait = { workspace = true }

axum-08 = { package = "axum", version = "0.8.9", optional = true, default-features = false, features = ["json"] }
tower-08 = { package = "tower", version = "0.5.3", optional = true }

http = { workspace = true }
http-body = "1.0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[features]
default = ["axum-08", "memory"]
axum-08 = ["dep:axum-08", "dep:tower-08"]
memory = ["dep:sa-token-storage-memory"]
redis = ["dep:sa-token-storage-redis"]
database = ["dep:sa-token-storage-database"]
full = ["memory", "redis", "database"]
