[package]
name = "sa-token-plugin-gotham-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Framework-agnostic core types for sa-token Gotham integration"

[dependencies]
sa-token-core = { version = "0.1.15", path = "../sa-token-core" }
sa-token-adapter = { version = "0.1.15", path = "../sa-token-adapter" }
serde = { workspace = true }
serde_json = { workspace = true }

sa-token-storage-memory = { version = "0.1.15", path = "../sa-token-storage-memory", optional = true }
sa-token-storage-redis = { version = "0.1.15", path = "../sa-token-storage-redis", optional = true }
sa-token-storage-database = { version = "0.1.15", path = "../sa-token-storage-database", optional = true }

[features]
default = []
memory = ["dep:sa-token-storage-memory"]
redis = ["dep:sa-token-storage-redis"]
database = ["dep:sa-token-storage-database"]
