[package]
name = "sa-token-plugin-gotham"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Gotham framework integration for sa-token-rust (facade over versioned bindings)"

[dependencies]
sa-token-plugin-gotham-v074 = { version = "0.1.14", path = "../sa-token-plugin-gotham-v074", optional = true }

[features]
default = ["v074", "memory"]
v074 = ["dep:sa-token-plugin-gotham-v074"]
memory = ["sa-token-plugin-gotham-v074?/memory"]
redis = ["sa-token-plugin-gotham-v074?/redis"]
database = ["sa-token-plugin-gotham-v074?/database"]
full = ["memory", "redis", "database"]
