[package]
name = "sa-token-plugin-ntex-v212"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ntex 2.12.x bindings for sa-token-rust"

[dependencies]
sa-token-plugin-ntex-core = { version = "0.1.16", path = "../sa-token-plugin-ntex-core" }
sa-token-core = { version = "0.1.16", path = "../sa-token-core" }
sa-token-adapter = { version = "0.1.16", path = "../sa-token-adapter" }
sa-token-macro = { version = "0.1.16", path = "../sa-token-macro" }

sa-token-storage-memory = { version = "0.1.16", path = "../sa-token-storage-memory", optional = true }
sa-token-storage-redis = { version = "0.1.16", path = "../sa-token-storage-redis", optional = true }
sa-token-storage-database = { version = "0.1.16", path = "../sa-token-storage-database", optional = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
ntex = "2.18.0"
urlencoding = { workspace = true }
tracing = { workspace = true }

[features]
default = ["memory"]
memory = [
    "dep:sa-token-storage-memory",
    "sa-token-plugin-ntex-core/memory",
]
redis = [
    "dep:sa-token-storage-redis",
    "sa-token-plugin-ntex-core/redis",
]
database = [
    "dep:sa-token-storage-database",
    "sa-token-plugin-ntex-core/database",
]
full = ["memory", "redis", "database"]
