[package]
name = "sa-token-plugin-ntex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Ntex framework integration for sa-token-rust (facade over versioned bindings)"

[dependencies]
sa-token-plugin-ntex-v212 = { version = "0.1.16", path = "../sa-token-plugin-ntex-v212", optional = true }

[features]
default = ["v212", "memory"]
v212 = ["dep:sa-token-plugin-ntex-v212"]
memory = ["sa-token-plugin-ntex-v212?/memory"]
redis = ["sa-token-plugin-ntex-v212?/redis"]
database = ["sa-token-plugin-ntex-v212?/database"]
full = ["memory", "redis", "database"]
