[package]
name = "sa-token-plugin-rocket"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rocket framework integration for sa-token-rust (facade over versioned bindings)"

[dependencies]
sa-token-plugin-rocket-v05 = { version = "0.1.15", path = "../sa-token-plugin-rocket-v05", optional = true }

[features]
default = ["v05", "memory"]
v05 = ["dep:sa-token-plugin-rocket-v05"]
memory = ["sa-token-plugin-rocket-v05?/memory"]
redis = ["sa-token-plugin-rocket-v05?/redis"]
database = ["sa-token-plugin-rocket-v05?/database"]
full = ["memory", "redis", "database"]
