[package]
name = "sa-token-plugin-salvo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Salvo framework integration for sa-token-rust (facade over versioned bindings)"

[dependencies]
sa-token-plugin-salvo-v079 = { version = "0.1.15", path = "../sa-token-plugin-salvo-v079", optional = true }

[features]
default = ["v079", "memory"]
v079 = ["dep:sa-token-plugin-salvo-v079"]
memory = ["sa-token-plugin-salvo-v079?/memory"]
redis = ["sa-token-plugin-salvo-v079?/redis"]
database = ["sa-token-plugin-salvo-v079?/database"]
full = ["memory", "redis", "database"]
