[package]
name = "sa-token-plugin-tonic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Tonic gRPC framework integration for sa-token-rust - All-in-one package"

[dependencies]
sa-token-core = { version = "0.1.16" }
sa-token-adapter = { version = "0.1.16" }
sa-token-macro = { version = "0.1.16" }

sa-token-storage-memory = { version = "0.1.16", optional = true }
sa-token-storage-redis = { version = "0.1.16", optional = true }
sa-token-storage-database = { version = "0.1.16", optional = true }

tokio = { workspace = true }
async-trait = { workspace = true }

tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

tower = { version = "0.5", optional = true }
http-body = { version = "1.0", optional = true }

http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[features]
default = ["tonic-012", "memory"]
tonic-012 = ["dep:tonic", "dep:prost", "dep:tower", "dep:http-body"]
memory = ["dep:sa-token-storage-memory"]
redis = ["dep:sa-token-storage-redis"]
database = ["dep:sa-token-storage-database"]
full = ["memory", "redis", "database"]
