[package]
name = "sa-token-plugin-warp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Warp framework integration for sa-token-rust - All-in-one package"

[dependencies]
# 核心依赖（重新导出给用户）
sa-token-core = { version = "0.1.16" }
sa-token-adapter = { version = "0.1.16" }
sa-token-macro = { version = "0.1.16" }

# 存储实现（可选，通过 feature 控制）
sa-token-storage-memory = { version = "0.1.16", optional = true }
sa-token-storage-redis = { version = "0.1.16", optional = true }
sa-token-storage-database = { version = "0.1.16", optional = true }

tokio = { workspace = true }
async-trait = { workspace = true }

warp-03 = { package = "warp", version = "0.3", optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
http = "1.4.0"
urlencoding = "2.1.3"
tracing = { workspace = true }

[features]
default = ["warp-03", "memory"]
warp-03 = ["dep:warp-03"]
# 存储后端选择
memory = ["sa-token-storage-memory"]
redis = ["sa-token-storage-redis"]
database = ["sa-token-storage-database"]
# 包含所有存储后端
full = ["memory", "redis", "database"]
