[package]
name = "sa-token-storage-database"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database storage implementation for sa-token-rust (placeholder)"

[dependencies]
sa-token-adapter = { version = "0.1.15", path = "../sa-token-adapter" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# 可选的数据库驱动（根据需要启用）
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }
# sea-orm = { version = "0.12" }
