[package]
name = "sa-token-storage-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Redis storage implementation for sa-token-rust"

[dependencies]
sa-token-adapter = { version = "0.1.15", path = "../sa-token-adapter" }
tokio = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
