[package]
name = "tonic-full-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sa-token-plugin-tonic = { path = "../../sa-token-plugin-tonic" }
sa-token-core = { path = "../../sa-token-core" }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
